update (dot, badge): change sizes

--- a/registry/src/components/Badge/index.css
+++ b/registry/src/components/Badge/index.css
@@ -1,16 +1,16 @@
 .badge {
-  @apply text-label-01 flex w-fit min-w-6 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
+  @apply text-label-01 flex w-fit min-w-6 shrink-0 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
 }
 
-.badge.md {
+.badge.medium {
   @apply min-w-6 px-1.5 py-1;
 }
 
-.badge.sm {
+.badge.small {
   @apply min-w-5 px-1.5 py-0.5;
 }
 
-.badge.xs {
+.badge.extra-small {
   @apply min-w-3.5 gap-0.5 px-[0.1875rem] py-0;
 }
 
@@ -20,12 +20,12 @@
   @apply h-4 w-4;
 }
 
-.badge.sm i,
-.badge.sm img,
-.badge.sm svg,
-.badge.xs i,
-.badge.xs img,
-.badge.xs svg {
+.badge.small i,
+.badge.small img,
+.badge.small svg,
+.badge.extra-small i,
+.badge.extra-small img,
+.badge.extra-small svg {
   @apply h-3 w-3;
 }
 
