--- a/registry/src/components/Dot/index.css
+++ b/registry/src/components/Dot/index.css
@@ -1,5 +1,5 @@
 .dot {
-  @apply relative m-0 min-h-1 min-w-1 select-none rounded-full bg-[currentColor] p-0;
+  @apply relative m-0 min-h-1 min-w-1 shrink-0 select-none rounded-full bg-[currentColor] p-0;
 }
 
 .dot.pulse::before {
@@ -8,19 +8,23 @@
 }
 
 /* sizes */
-.dot.xs {
+.dot.extra-small {
   @apply h-1 w-1;
 }
 
-.dot.sm {
+.dot.small {
+  @apply h-[0.3125rem] w-[0.3125rem];
+}
+
+.dot.medium {
   @apply h-1.5 w-1.5;
 }
 
-.dot.md {
+.dot.large {
   @apply h-2 w-2;
 }
 
-.dot.lg {
+.dot.extra-large {
   @apply h-3 w-3;
 }
 
