update (corner-indicator): - add growDirection: 'symmetric' (default) | 'inward' | 'outward' - support xOffset, yOffset

--- a/registry/src/components/Badge/index.css
+++ b/registry/src/components/Badge/index.css
@@ -1,17 +1,17 @@
 .badge {
-  @apply text-label-01 flex w-fit min-w-6 shrink-0 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
+  @apply text-label-01 flex min-h-6 w-fit min-w-6 shrink-0 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
 }
 
 .badge.medium {
-  @apply min-w-6 px-1.5 py-1;
+  @apply min-h-6 min-w-6 px-1.5 py-1;
 }
 
 .badge.small {
-  @apply min-w-5 px-1.5 py-0.5;
+  @apply min-h-5 min-w-5 px-1.5 py-0.5;
 }
 
 .badge.extra-small {
-  @apply min-w-3.5 gap-0.5 px-[0.1875rem] py-0;
+  @apply min-h-3.5 min-w-3.5 gap-0.5 px-[0.1875rem] py-0 text-[0.6875rem] leading-[0.875rem];
 }
 
 .badge i,
