--- a/registry/src/components/CornerIndicator/index.css
+++ b/registry/src/components/CornerIndicator/index.css
@@ -15,24 +15,24 @@
 /* position */
 .corner-indicator-container.top-right > .badge,
 .corner-indicator-container.top-right > .dot {
-  transform: translate(calc(50% + var(--par-offset)), calc(-50% - var(--par-offset)));
+  transform: translate(calc(var(--par-x-origin) * 1% + var(--par-x-offset)), calc(-50% - var(--par-y-offset)));
   @apply right-0 top-0;
 }
 
 .corner-indicator-container.top-left > .badge,
 .corner-indicator-container.top-left > .dot {
-  transform: translate(calc(-50% - var(--par-offset)), calc(-50% - var(--par-offset)));
+  transform: translate(calc(var(--par-x-origin) * -1% - var(--par-x-offset)), calc(-50% - var(--par-y-offset)));
   @apply left-0 top-0;
 }
 
 .corner-indicator-container.bottom-right > .badge,
 .corner-indicator-container.bottom-right > .dot {
-  transform: translate(calc(+50% + var(--par-offset)), calc(+50% + var(--par-offset)));
+  transform: translate(calc(var(--par-x-origin) * 1% + var(--par-x-offset)), calc(50% + var(--par-y-offset)));
   @apply bottom-0 right-0;
 }
 
 .corner-indicator-container.bottom-left > .badge,
 .corner-indicator-container.bottom-left > .dot {
-  transform: translate(calc(-50% - var(--par-offset)), calc(+50% + var(--par-offset)));
+  transform: translate(calc(var(--par-x-origin) * -1% - var(--par-x-offset)), calc(50% + var(--par-y-offset)));
   @apply bottom-0 left-0;
 }
