--- a/registry/src/components/Badge/index.css
+++ b/registry/src/components/Badge/index.css
@@ -1,5 +1,6 @@
 .badge {
-  @apply text-label-01 flex min-h-6 w-fit min-w-6 shrink-0 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1 font-semibold;
+  @apply text-label-01 flex min-h-6 w-fit min-w-6 shrink-0 select-none items-center justify-center gap-1 truncate rounded-full border border-none px-1.5 py-1;
+  font-weight: 600;
 }
 
 .badge.medium {
