--- a/registry/src/components/global.css
+++ b/registry/src/components/global.css
@@ -4,9 +4,23 @@
 
 @config '../../tailwind.config.js';
 
+:root [data-scheme='light'] {
+  --par-focus-visible-ring-color: rgba(22, 22, 22, 1);
+}
+
+[data-scheme='dark'] {
+  --par-focus-visible-ring-color: rgba(255, 255, 255, 1);
+}
+
 *:focus-visible,
 *[data-focus-visible='true'] {
-  outline: 2px solid rgba(22, 22, 22, 1);
+  outline: 2px solid var(--par-focus-visible-ring-color);
+  outline-offset: 1px;
+}
+
+[data-theme='dark'] *:focus-visible,
+[data-theme='dark'] *[data-focus-visible='true'] {
+  outline: 2px solid var(--par-focus-visible-ring-color);
   outline-offset: 1px;
 }
 
