--- a/registry/src/components/Button/index.css
+++ b/registry/src/components/Button/index.css
@@ -95,7 +95,7 @@
   @apply border-blue-500 bg-blue-500 text-blue-500 enabled:hover:border-blue-600 enabled:hover:bg-blue-600 enabled:hover:text-blue-600 enabled:active:border-blue-700 enabled:active:bg-blue-700 enabled:active:text-blue-700;
 }
 
-.btn.filled {
+.btn.solid {
   @apply border-none text-white enabled:hover:text-white enabled:active:text-white;
 }
 
